--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     <footer>
       &copy; 2018 Code Fellows
     </footer>
+    <script src="https://code.jquery.com/jquery-3.4.1.js" ></script>
     <script src="js/app.js"></script>
   </body>
 </html>
